--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.3.34</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://http://13.127.36.75:9000/</sonar.host.url>
+		<sonar.host.url>http://http://13.127.36.75:9000</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>Sri10@harsha</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
