--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,8 +6,8 @@ node
    echo "node name is: ${env.NODE_NAME}"
 
 
-   // /var/lib/jenkins/tools/hudson.tasks.Maven_MavenInstallation/maven-3.9.9/bin
-   def mavenHome=tool name: "maven-3.9.9"
+   // /var/lib/jenkins/tools/hudson.tasks.Maven_MavenInstallation/Maven-3.9.9/bin
+   def mavenHome=tool name: "Maven-3.9.9"
     try
     {
 
